--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CardGameWPF.MainWindow"
+﻿<Window x:Class="Client.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
