--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -130,8 +130,8 @@
         </Grid>
         <Grid Name="LoginGrid">
             <ComboBox Name="ServerComboBox" Margin="444,386,386,149"/>
-            <Label Margin="387,344,579,191" VerticalAlignment="Center" Height="37" RenderTransformOrigin="1.288,0.459">Name:</Label>
-            <Label Margin="387,386,579,149" VerticalAlignment="Center" Height="37" RenderTransformOrigin="1.288,0.459">Server:</Label>
+            <Label Margin="387,344,579,191" VerticalAlignment="Center" Height="37" RenderTransformOrigin="1.288,0.459">Name</Label>
+            <Label Margin="387,386,579,149" VerticalAlignment="Center" Height="37" RenderTransformOrigin="1.288,0.459">Server</Label>
             <Button Name="LoginBox" Content="Login" HorizontalAlignment="Left" Height="60" Margin="412,450,0,0" VerticalAlignment="Top" Width="200" Click="LoginButtonClick"/>
             <TextBox Name="UserNameBox" Padding="7" HorizontalAlignment="Left" Height="37" Margin="444,344,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" MaxLength="16" TextChanged="UserNameBox_Changed"/>
         </Grid>
