--- a/Client/Misc/GenericNumberMethodTemplate.tt
+++ b/Client/Misc/GenericNumberMethodTemplate.tt
@@ -14,10 +14,9 @@
 #>
 
 using System;
-using System.IO;
-namespace CardGameWPF.Network
+namespace Client.Network
 {
-	public partial class Packet
+	public partial class Packet : IDisposable
 	{
 		<# foreach (var type in types)
 		{ #>
