--- a/Client.UI/Views/User/Login.xaml
+++ b/Client.UI/Views/User/Login.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Client.UI.Views.User.Login"
+﻿<Page x:Class="Client.UI.Views.User.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,10 +6,10 @@
         xmlns:resx="clr-namespace:Client.UI.Resources"
         xmlns:viewmodels="clr-namespace:Client.UI.ViewModels.User"
         mc:Ignorable="d"
-        Title="Login" Height="450" Width="800">
-    <Window.DataContext>
+        Title="{x:Static resx:Texts.Login}" Height="450" Width="800">
+    <Page.DataContext>
         <viewmodels:LoginViewModel />
-    </Window.DataContext>
+    </Page.DataContext>
     
     <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
         <Grid.RowDefinitions>
@@ -29,8 +29,11 @@
         <Button Margin="0 10 0 0" Grid.Row="2" Grid.ColumnSpan="2" Command="{Binding}" >
             <Label Content="{x:Static resx:Texts.Login}" />
         </Button>
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Grid.Row="3" Grid.ColumnSpan="2" Command="{Binding}">
-            <Label Content="{x:Static resx:Texts.CreateAccount}" />
-        </Button>
+
+        <TextBlock Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center">
+            <Hyperlink NavigateUri="CreateAccount.xaml">
+                <Run Text="{x:Static resx:Texts.CreateAccount}"/>
+            </Hyperlink>
+        </TextBlock>
     </Grid>
-</Window>
+</Page>
