--- a/Client.UI/Views/User/CreateAccount.xaml
+++ b/Client.UI/Views/User/CreateAccount.xaml
@@ -1,14 +1,38 @@
 ﻿<Page x:Class="Client.UI.Views.User.CreateAccount"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Client.UI.Views.User"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="CreateAccount">
-
-    <Grid>
-        
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:resx="clr-namespace:Client.UI.Resources"
+        xmlns:viewmodels="clr-namespace:Client.UI.ViewModels.User"
+        mc:Ignorable="d" 
+        d:DesignHeight="450" d:DesignWidth="800"
+        Title="{x:Static resx:Texts.CreateAccount}">
+    <Page.DataContext>
+        <viewmodels:LoginViewModel />
+    </Page.DataContext>
+    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <TextBlock Margin="0 0 5 0" Text="{x:Static resx:Texts.UserName}" />
+        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username}"/>
+        <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.Email}" />
+        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Email}"/>
+        <TextBlock Margin="0 0 5 0" Grid.Row="2" Text="{x:Static resx:Texts.Password}" />
+        <TextBox Width="150" Margin="0 2" Grid.Row="2" Grid.Column="1" Text="{Binding Password}"/>
+        <TextBlock Margin="0 0 5 0" Grid.Row="3" Text="{x:Static resx:Texts.PasswordAgain}" />
+        <TextBox Width="150" Margin="0 2" Grid.Row="3" Grid.Column="1" Text="{Binding PasswordAgain}"/>
+        <Button Margin="0 10 0 0" Grid.Row="4" Grid.ColumnSpan="2" Command="{Binding}" >
+            <Label Content="{x:Static resx:Texts.CreateAccount}" />
+        </Button>
     </Grid>
 </Page>
