--- a/Client.UI/Views/User/Login.xaml
+++ b/Client.UI/Views/User/Login.xaml
@@ -10,7 +10,6 @@
     <Page.DataContext>
         <viewmodels:LoginViewModel />
     </Page.DataContext>
-    
     <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -23,13 +22,12 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <TextBlock Margin="0 0 5 0" Text="{x:Static resx:Texts.UserName}" />
-        <TextBox Width="150" Grid.Column="1" Text="{Binding Username}"/>
+        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username}"/>
         <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.Password}" />
-        <TextBox Width="150" Grid.Row="1" Grid.Column="1" Text="{Binding Password}"/>
+        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Password}"/>
         <Button Margin="0 10 0 0" Grid.Row="2" Grid.ColumnSpan="2" Command="{Binding}" >
             <Label Content="{x:Static resx:Texts.Login}" />
         </Button>
-
         <TextBlock Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center">
             <Hyperlink NavigateUri="CreateAccount.xaml">
                 <Run Text="{x:Static resx:Texts.CreateAccount}"/>
