--- a/Client.UI/Views/User/CreateAccount.xaml
+++ b/Client.UI/Views/User/CreateAccount.xaml
@@ -24,14 +24,14 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <TextBlock Margin="0 0 5 0" Text="{x:Static resx:Texts.UserName}" />
-        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username}"/>
+        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username}" />
         <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.Email}" />
-        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Email}"/>
+        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Email}" />
         <TextBlock Margin="0 0 5 0" Grid.Row="2" Text="{x:Static resx:Texts.Password}" />
-        <TextBox Width="150" Margin="0 2" Grid.Row="2" Grid.Column="1" Text="{Binding Password}"/>
+        <PasswordBox Width="150" Margin="0 2" Grid.Row="2" Grid.Column="1" />
         <TextBlock Margin="0 0 5 0" Grid.Row="3" Text="{x:Static resx:Texts.PasswordAgain}" />
-        <TextBox Width="150" Margin="0 2" Grid.Row="3" Grid.Column="1" Text="{Binding PasswordAgain}"/>
-        <Button Margin="0 10 0 0" Grid.Row="4" Grid.ColumnSpan="2" Command="{Binding}" >
+        <PasswordBox Width="150" Margin="0 2" Grid.Row="3" Grid.Column="1" />
+        <Button Margin="0 10 0 0" Grid.Row="4" Grid.ColumnSpan="2" Command="{Binding}">
             <Label Content="{x:Static resx:Texts.CreateAccount}" />
         </Button>
     </Grid>
