--- a/Client.UI/Views/User/Login.xaml
+++ b/Client.UI/Views/User/Login.xaml
@@ -24,7 +24,7 @@
         <TextBlock Margin="0 0 5 0" Text="{x:Static resx:Texts.UserName}" />
         <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username}"/>
         <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.Password}" />
-        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Password}"/>
+        <PasswordBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" />
         <Button Margin="0 10 0 0" Grid.Row="2" Grid.ColumnSpan="2" Command="{Binding}" >
             <Label Content="{x:Static resx:Texts.Login}" />
         </Button>
