--- a/Client.UI/Views/User/CreateAccount.xaml
+++ b/Client.UI/Views/User/CreateAccount.xaml
@@ -9,10 +9,11 @@
         d:DesignHeight="450" d:DesignWidth="800"
         Title="{x:Static resx:Texts.CreateAccount}">
     <Page.DataContext>
-        <viewmodels:LoginViewModel />
+        <viewmodels:CreateAccountViewModel />
     </Page.DataContext>
     <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -24,14 +25,15 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <TextBlock Margin="0 0 5 0" Text="{x:Static resx:Texts.UserName}" />
-        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username}" />
+        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username, Mode=OneWayToSource}" />
         <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.Email}" />
-        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Email}" />
+        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Email, Mode=OneWayToSource}" />
         <TextBlock Margin="0 0 5 0" Grid.Row="2" Text="{x:Static resx:Texts.Password}" />
-        <PasswordBox Width="150" Margin="0 2" Grid.Row="2" Grid.Column="1" />
+        <PasswordBox Width="150" Margin="0 2" Grid.Row="2" Grid.Column="1" Name="Password" />
         <TextBlock Margin="0 0 5 0" Grid.Row="3" Text="{x:Static resx:Texts.PasswordAgain}" />
-        <PasswordBox Width="150" Margin="0 2" Grid.Row="3" Grid.Column="1" />
-        <Button Margin="0 10 0 0" Grid.Row="4" Grid.ColumnSpan="2" Command="{Binding}">
+        <PasswordBox Width="150" Margin="0 2" Grid.Row="3" Grid.Column="1" Name="PasswordAgain" />
+        <TextBlock Foreground="Red" Grid.Row="4" Grid.ColumnSpan="2" Text="{Binding ErrorMessage}" Visibility="{Binding HasError, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <Button Margin="0 10 0 0" Grid.Row="5" Grid.ColumnSpan="2" Click="CreateAccountBtn_Click">
             <Label Content="{x:Static resx:Texts.CreateAccount}" />
         </Button>
     </Grid>
