--- a/Client.UI/Views/User/Login.xaml
+++ b/Client.UI/Views/User/Login.xaml
@@ -16,19 +16,21 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <TextBlock Margin="0 0 5 0" Text="{x:Static resx:Texts.UserName}" />
-        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username}"/>
+        <TextBox Width="150" Margin="0 2" Grid.Column="1" Text="{Binding Username, Mode=OneWayToSource}"/>
         <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.Password}" />
-        <PasswordBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" />
-        <Button Margin="0 10 0 0" Grid.Row="2" Grid.ColumnSpan="2" Command="{Binding}" >
+        <PasswordBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Name="Password" />
+        <TextBlock Foreground="Red" Grid.Row="2" Grid.ColumnSpan="2" Text="{Binding ErrorMessage}" Visibility="{Binding HasError, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <Button Margin="0 10 0 0" Grid.Row="3" Grid.ColumnSpan="2" Click="LoginBtn_Click" >
             <Label Content="{x:Static resx:Texts.Login}" />
         </Button>
-        <TextBlock Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center">
+        <TextBlock Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Center">
             <Hyperlink NavigateUri="CreateAccount.xaml">
                 <Run Text="{x:Static resx:Texts.CreateAccount}"/>
             </Hyperlink>
