--- a/Client.UI/Views/User/CreateAccount.xaml
+++ b/Client.UI/Views/User/CreateAccount.xaml
@@ -36,7 +36,7 @@
         <TextBlock Margin="0 0 5 0" Grid.Row="4" Text="{x:Static resx:Texts.PasswordAgain}" />
         <PasswordBox Width="150" Margin="0 2" Grid.Row="4" Grid.Column="1" Name="PasswordAgain" />
         <TextBlock Foreground="Red" Grid.Row="5" Grid.ColumnSpan="2" Text="{Binding ErrorMessage}" Visibility="{Binding HasError, Converter={StaticResource BooleanToVisibilityConverter}}" />
-        <Button Margin="0 10 0 0" Grid.Row="6" Grid.ColumnSpan="2" Click="CreateAccountBtn_Click">
+        <Button Name="CreateAccountBtn" Margin="0 10 0 0" Grid.Row="6" Grid.ColumnSpan="2" Click="CreateAccountBtn_Click">
             <Label Content="{x:Static resx:Texts.CreateAccount}" />
         </Button>
     </Grid>
