--- a/Client.UI/Views/User/Login.xaml
+++ b/Client.UI/Views/User/Login.xaml
@@ -25,12 +25,12 @@
         </Grid.ColumnDefinitions>
         <TextBlock Margin="0 0 5 0" Text="{x:Static resx:Texts.Server}" />
         <ComboBox Width="150" Grid.Column="1" ItemsSource="{Binding ServerList, Mode=OneWay}" SelectedItem="{Binding Server}"/>
-        <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.UserName}" />
-        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Username, Mode=OneWayToSource}"/>
+        <TextBlock Margin="0 0 5 0" Grid.Row="1" Text="{x:Static resx:Texts.Email}" />
+        <TextBox Width="150" Margin="0 2" Grid.Row="1" Grid.Column="1" Text="{Binding Email, Mode=OneWayToSource}"/>
         <TextBlock Margin="0 0 5 0" Grid.Row="2" Text="{x:Static resx:Texts.Password}" />
         <PasswordBox Width="150" Margin="0 2" Grid.Row="2" Grid.Column="1" Name="Password" />
         <TextBlock Foreground="Red" Grid.Row="3" Grid.ColumnSpan="2" Text="{Binding ErrorMessage}" Visibility="{Binding HasError, Converter={StaticResource BooleanToVisibilityConverter}}" />
-        <Button Margin="0 10 0 0" Grid.Row="4" Grid.ColumnSpan="2" Click="LoginBtn_Click" >
+        <Button Name="LoginBtn" Margin="0 10 0 0" Grid.Row="4" Grid.ColumnSpan="2" Click="LoginBtn_Click" >
             <Label Content="{x:Static resx:Texts.Login}" />
         </Button>
         <TextBlock Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Center">
