Added button for stating game, slightly implemented, added ico

--- a/Client.UI/Views/User/Login.xaml
+++ b/Client.UI/Views/User/Login.xaml
@@ -6,7 +6,8 @@
         xmlns:resx="clr-namespace:Client.UI.Resources"
         xmlns:viewmodels="clr-namespace:Client.UI.ViewModels.User"
         mc:Ignorable="d"
-        Title="{x:Static resx:Texts.Login}" Height="450" Width="800">
+        Title="{x:Static resx:Texts.Login}" Height="450" Width="800"
+        WindowTitle="Card Game">
     <Page.DataContext>
         <viewmodels:LoginViewModel />
     </Page.DataContext>
