--- a/Client.UI/Views/Game/SelectCardsViewModel.xaml
+++ b/Client.UI/Views/Game/SelectCardsViewModel.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Client.UI.Views.Game.MainMenu"
+﻿<Page x:Class="Client.UI.Views.Game.SelectCards"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,11 +6,10 @@
         xmlns:resx="clr-namespace:Client.UI.Resources"
         xmlns:viewmodels="clr-namespace:Client.UI.ViewModels.MainGame"
         mc:Ignorable="d"
-        Title="{x:Static resx:Texts.MainMenu}" Height="450" Width="800">
+        Title="{x:Static resx:Texts.SelectCards}" Height="450" Width="800">
     <Page.DataContext>
-        <viewmodels:MainMenuViewModel />
+        <viewmodels:SelectCardsViewModel />
     </Page.DataContext>
     <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-        <Button Content="{x:Static resx:Texts.StartGame}" Command="{Binding StartGameCommand}" />
     </Grid>
 </Page>
