--- a/Client.UI/Views/Game/SelectCards.xaml
+++ b/Client.UI/Views/Game/SelectCards.xaml
@@ -6,7 +6,7 @@
         xmlns:resx="clr-namespace:Client.UI.Resources"
         xmlns:viewmodels="clr-namespace:Client.UI.ViewModels.MainGame"
         mc:Ignorable="d"
-        Title="{x:Static resx:Texts.SelectCards}" Height="450" Width="800">
+        Title="{x:Static resx:Texts.SelectCards}">
     <Page.DataContext>
         <viewmodels:SelectCardsViewModel />
     </Page.DataContext>
