--- a/Client.UI/Views/Game/PlayingGame.xaml
+++ b/Client.UI/Views/Game/PlayingGame.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:Client.UI.Controls"
         xmlns:viewmodels="clr-namespace:Client.UI.ViewModels.MainGame"
         mc:Ignorable="d"
-        Title="{x:Static resx:Texts.Game}" Height="450" Width="800">
+        Title="{x:Static resx:Texts.Game}">
     <Page.DataContext>
         <viewmodels:PlayingGameViewModel />
     </Page.DataContext>
@@ -15,8 +15,21 @@
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <controls:CardDeck DataContext="{Binding Opponent}"/>
-        <controls:CardDeck Grid.Row="1" DataContext="{Binding Player}" />
+        <controls:CardDeck Grid.Row="2" DataContext="{Binding Player}" />
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="1" Height="30" Margin="5" Content="{x:Static resx:Texts.Attack}" Command="{Binding AttackCmd}" />
+            <Button Grid.Column="2" Height="30" Margin="5" Content="{x:Static resx:Texts.Spell}" Command="{Binding SpellAttackCmd}" />
+            <Button Grid.Column="3" Height="30" Margin="5" Content="{x:Static resx:Texts.Defend}" Command="{Binding DefendCmd}" />
+        </Grid>
     </Grid>
 </Page>
