--- a/Client.UI/Views/Game/PlayingGame.xaml
+++ b/Client.UI/Views/Game/PlayingGame.xaml
@@ -11,25 +11,27 @@
     <Page.DataContext>
         <viewmodels:PlayingGameViewModel />
     </Page.DataContext>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <controls:CardDeck DataContext="{Binding Opponent}"/>
-        <controls:CardDeck Grid.Row="2" DataContext="{Binding Player}" />
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="100" />
-                <ColumnDefinition Width="100" />
-                <ColumnDefinition Width="100" />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="1" Height="30" Margin="5" Content="{x:Static resx:Texts.Attack}" Command="{Binding AttackCmd}" />
-            <Button Grid.Column="2" Height="30" Margin="5" Content="{x:Static resx:Texts.Spell}" Command="{Binding SpellAttackCmd}" />
-            <Button Grid.Column="3" Height="30" Margin="5" Content="{x:Static resx:Texts.Defend}" Command="{Binding DefendCmd}" />
+    <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Auto">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition MinHeight="50"/>
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <controls:CardDeck DataContext="{Binding Opponent}"/>
+            <controls:CardDeck Grid.Row="2" DataContext="{Binding Player}" />
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="1" Height="30" Margin="5" Content="{x:Static resx:Texts.Attack}" Command="{Binding AttackCmd}" />
+                <Button Grid.Column="2" Height="30" Margin="5" Content="{x:Static resx:Texts.Spell}" Command="{Binding SpellAttackCmd}" />
+                <Button Grid.Column="3" Height="30" Margin="5" Content="{x:Static resx:Texts.Defend}" Command="{Binding DefendCmd}" />
+            </Grid>
         </Grid>
-    </Grid>
+    </ScrollViewer>
 </Page>
